--- a/app/src/main/res/layout/expense_recycler_data.xml
+++ b/app/src/main/res/layout/expense_recycler_data.xml
@@ -16,15 +16,15 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content">
+
             <TextView
+                android:id="@+id/date_txt_expense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="6 June 2023"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:textStyle="bold"
-                android:id="@+id/data_txt_expense"
                 android:textColor="@color/date_color"
-                />
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
@@ -67,7 +67,7 @@
                 android:text="60000"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
-                android:id="@+id/ammount_txt_expense"
+                android:id="@+id/amount_txt_expense"
                 android:textColor="@color/expense_amount"
                 />
 
