--- a/app/src/main/res/layout/fragment_habits.xml
+++ b/app/src/main/res/layout/fragment_habits.xml
@@ -1,121 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/lavender"
     tools:context="fragments.HabitsFragment">
 
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:text=" Fragment 1"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
+            android:layout_gravity="bottom|end"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="180dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create a habit"
+                android:id="@+id/habits_ft_text"
+                android:textColor="@color/white"
+                android:padding="5dp"
+                android:background="@color/lavender"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:visibility="invisible"
+                android:textAppearance="?android:textAppearanceSmall"
+                />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/habits_ft_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:backgroundTint="#353923"
+                android:elevation="6dp"
+
+                android:src="@drawable/baseline_add"
+                android:visibility="invisible"
+
+
+                />
+
+        </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:text="Share Fragment"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:text="Share Fragment"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:text="Share Fragment"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:text="Share Fragment"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:text="Share Fragment"/>
+            android:id="@+id/habits_plus_btn"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="105dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="#6A1B9A"
 
-        <pl.droidsonroids.gif.GifImageView
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/duckduck"/>
-        <pl.droidsonroids.gif.GifImageView
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/duckduck"/>
-        <pl.droidsonroids.gif.GifImageView
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/duckduck"/>
-        <pl.droidsonroids.gif.GifImageView
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/duckduck"/>
-        <pl.droidsonroids.gif.GifImageView
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/duckduck"/>
-        <pl.droidsonroids.gif.GifImageView
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/duckduck"/>
+            android:src="@drawable/baseline_add"
+            android:layout_height="wrap_content" />
 
 
 
+        <RelativeLayout
+            android:id="@+id/groupedContainer"
+            android:layout_width="347dp"
+            android:layout_height="160dp"
+            android:layout_margin="16dp"
+            tools:ignore="MissingConstraints">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/rectangleBackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/lavender"
+                android:scaleType="fitXY" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="298dp"
+                android:layout_height="118dp"
+                android:layout_centerInParent="true"
+                android:background="@android:color/transparent"
+                android:cacheColorHint="@android:color/transparent"
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="1dp"
+                android:scrollbars="vertical" />
 
 
+        </RelativeLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/imageView24"
+        android:layout_width="100dp"
+        android:layout_height="116dp"
+        android:layout_gravity="center"
+
+        android:layout_marginStart="155dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginBottom="88dp"
+        android:src="@drawable/duckduck"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/habits_fab"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-
-
-</ScrollView>
+</LinearLayout>
