--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".LogIn">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/gifImageView"
+    <ImageView
         android:layout_width="270dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/duckduck"
+        android:layout_height="270dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="56dp"
+        android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,13 +25,14 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="472dp"
         android:gravity="center"
-        android:text="Welcome back!"
+        android:text="WELCOME!"
         android:textSize="40dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />
+         />
 
 
     <EditText
