--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,16 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:layout_width="400dp"
-        android:layout_height="300dp"
-        android:src="@drawable/duckduck"
+
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="56dp"
+        android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,44 +24,57 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome!"
-        android:textSize="48dp"
+        android:text="ELEVATE YOUR SUCCESS"
+        android:textColor="@color/lavender"
+
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.433" />
+        app:layout_constraintVertical_bias="0.54" />
 
+    <TextView
+        android:id="@+id/textview4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" WITH DUCKTIVE!"
+        android:textSize="25dp"
+        android:textColor="@color/lavender"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.589" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="150dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="264dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="188dp"
+        android:background="@color/lavender"
         android:text="Log In"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintEnd_toStartOf="@+id/btnSignup1"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnSignup1"
         android:layout_width="150dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="163dp"
-        android:layout_marginBottom="172dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="188dp"
+        android:background="@color/lavender"
         android:text="Sign Up"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+        app:layout_constraintStart_toEndOf="@+id/btnLogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
