--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,13 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Welcome">
 
+
+
     <TextView
         android:id="@+id/lblSettled"
         android:layout_width="327dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
-        android:text="You are all settled! Lets get started!\n \n Task Management Tool"
+        android:text=" You are all set up! \n \n Let's get started!"
+        android:textColor="@color/black"
         android:textSize="38dp"
         app:layout_constraintBottom_toTopOf="@+id/btnStart"
         app:layout_constraintEnd_toEndOf="parent"
