--- a/app/src/main/res/layout/custom_layout_for_creatinghabits.xml
+++ b/app/src/main/res/layout/custom_layout_for_creatinghabits.xml
@@ -99,6 +99,47 @@
                 android:layout_height="wrap_content">
                 <RelativeLayout
                     android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TIME:"/>
+
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_margin="10dp"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:gravity="center"
+                        android:hint="Example: 16:00 (4:00 PM)"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/habitstime_edt"/>
+
+
+
+
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_margin="10dp"
                     android:gravity="center"
