--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -43,6 +43,23 @@
 
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Threshold"
+                        android:textAppearance="?android:textAppearanceLarge"
+                        android:textColor="@color/green" />
+
+
+                </RelativeLayout>
+
 
             </LinearLayout>
 
@@ -65,6 +82,24 @@
                         android:id="@+id/expense_text_result"
                         android:textAppearance="?android:textAppearanceLarge"
                         android:textColor="@color/red"
+                        android:text="000.00"
+                        />
+
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/threshold_text_result"
+                        android:textAppearance="?android:textAppearanceLarge"
+                        android:textColor="@color/green"
                         android:text="000.00"
                         />
 
@@ -95,7 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="250dp"
+            android:layout_marginBottom="180dp"
             android:elevation="90dp">
 
             <TextView
@@ -127,30 +162,30 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="180dp"
-            android:layout_height="wrap_content"
+            android:layout_marginBottom="250dp"
             android:elevation="90dp">
 
             <TextView
+                android:id="@+id/threshold_ft_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Income"
-                android:id="@+id/income_ft_text"
-                android:textColor="@color/white"
-                android:padding="5dp"
-                android:background="@color/lavender"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:visibility="invisible"
+                android:background="@color/lavender"
+                android:padding="5dp"
+                android:text="Threshold"
                 android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="@color/white"
+                android:visibility="invisible"
                 />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/threshold_ft_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/income_ft_btn"
                 android:layout_gravity="bottom|end"
                 android:backgroundTint="#353923"
                 android:elevation="6dp"
@@ -192,7 +227,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv"
-                android:layout_width="373dp"
+                android:layout_width="298dp"
                 android:layout_height="619dp"
                 android:layout_centerInParent="true"
                 android:background="@android:color/transparent"
@@ -200,7 +235,6 @@
                 android:divider="@android:color/darker_gray"
                 android:dividerHeight="1dp"
                 android:scrollbars="vertical" />
-
 
         </RelativeLayout>
 
