--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,7 +23,8 @@
             android:layout_gravity="bottom|end"
             android:layout_marginRight="15dp"
             android:layout_marginBottom="180dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:translationZ="90dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -43,9 +45,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tasks1_ft_btn"
                 android:layout_gravity="bottom|end"
-                android:backgroundTint="#353923"
+                android:backgroundTint="#07bca4"
                 android:elevation="6dp"
-
+                app:fabSize="mini"
                 android:visibility="invisible"
                 android:src="@drawable/baseline_add"
 
@@ -69,22 +71,16 @@
 
         <RelativeLayout
             android:id="@+id/groupedContainer"
-            android:layout_width="347dp"
-            android:layout_height="160dp"
+            android:layout_width="380dp"
+            android:layout_height="622dp"
             android:layout_margin="16dp"
+            android:elevation="2dp"
             tools:ignore="MissingConstraints">
 
-            <ImageView
-                android:id="@+id/rectangleBackground"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/lavender"
-                android:scaleType="fitXY" />
-
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/taskrcv"
                 android:layout_width="298dp"
-                android:layout_height="118dp"
+                android:layout_height="619dp"
                 android:layout_centerInParent="true"
                 android:background="@android:color/transparent"
                 android:cacheColorHint="@android:color/transparent"
@@ -93,7 +89,9 @@
                 android:scrollbars="vertical" />
 
 
+
         </RelativeLayout>
+
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
