--- a/app/src/main/res/layout/habits_recycler_data.xml
+++ b/app/src/main/res/layout/habits_recycler_data.xml
@@ -1,58 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="5dp"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:elevation="5dp"
-    android:layout_height="wrap_content">
-    
+    android:elevation="5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="100dp">
 
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:layout_weight="0">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/date_txt_habits"
+                android:layout_width="50dp"
+                android:layout_height="100dp"
+
                 android:text="6 June 2023"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:textStyle="bold"
-                android:id="@+id/data_txt_income"
                 android:textColor="@color/date_color"
-                />
-            
+                android:textStyle="bold" />
+
+
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_width="50dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Type"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textStyle="bold"
-                android:id="@+id/type_txt_income"
-                android:textColor="@color/date_color"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Note"
-                android:maxLines="1"
 
+            <TextView
+                android:id="@+id/habitsname_txt_habits"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="HABIT NAME"
                 android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="@color/date_color"
                 android:textStyle="bold"
+
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:text="Description"
+                android:maxLines="1"
+                android:textAppearance="?android:textAppearanceSmall"
+
                 android:textColor="@android:color/black"
-                android:layout_below="@id/type_txt_income"
-                android:id="@+id/note_txt_income"
+                android:layout_below="@id/habitsname_txt_habits"
+                android:id="@+id/desc_txt_habits"
+
 
                 />
 
@@ -65,15 +69,22 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="60000"
+                android:text="TIME"
+                android:gravity="center"
+                android:layout_marginBottom="90dp"
+                android:layout_marginTop="40dp"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
-                android:id="@+id/ammount_txt_income"
-                android:textColor="@color/date_color"
+                android:id="@+id/time_txt_habits"
+                android:textColor="@color/expense_amount"
                 />
 
 
+
+
         </RelativeLayout>
+
+
 
     </LinearLayout>
 
